# dgis_hooks

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: mypy-audit.yml  python-package.yml
src/dgis/hooks/plugins/: discover.py  plugin.py
src/dgis/hooks/plugins/packaged/: black_format_check.py  branch_check.py  clang_format_check.py  json_check.py  utf8_check.py  xml_check.py
src/dgis/hooks/pre_receive/: entry_point.py
src/dgis/hooks/scripts/: __init__.py  clang_format_diff.py
src/dgis/hooks/scripts_gitlab_ci/: entry_point.py  gitlab_reporter.py
src/dgis/hooks/utility/: common.py  env.py  format.py  git.py  log.py
tests/: test_black_format_check_plugin.py  test_branch_check_plugin.py  test_clang_format_check_plugin.py  test_discover.py  test_git.py  test_gitlab_reporter.py  test_json_check_plugin.py  test_utf8_check_plugin.py  test_xml_check_plugin.py  utility.py
