[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dgis_hooks"
version = "0.0.10"
authors = [
    { name = "Ilya Makarov", email="i.o.makarov@2gis.ru" },
]
description="Small lightweight package for git hooks."
readme="README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "GitPython>=3.1",
    "pytest>=8.1",
    "simplejson>=3.19",
    "types-simplejson>=3.19",
    "importlib-metadata>=7.0",
    "dataclasses>=0.6",
    "colorama>=0.4",
    "black==24.3",
    "requests>=2.33",
    "types-requests>=2.33",
]

[project.scripts]
dgis-pre-receive = "dgis.hooks.pre_receive:entry_point"
dgis-clang-format-diff = "dgis.hooks.scripts:entry_point"
dgis-gitlab-ci-run = "dgis.hooks.scripts_gitlab_ci:entry_point"

# Packaged plugins.
[project.entry-points."dgis.hooks.plugins"]
BranchCheckPlugin = "dgis.hooks.plugins.packaged.branch_check:BranchCheckPlugin"
ClangFormatCheckPlugin = "dgis.hooks.plugins.packaged.clang_format_check:ClangFormatCheckPlugin"
JsonCheckPlugin = "dgis.hooks.plugins.packaged.json_check:JsonCheckPlugin"
UTF8CheckPlugin = "dgis.hooks.plugins.packaged.utf8_check:UTF8CheckPlugin"
XmlCheckPlugin = "dgis.hooks.plugins.packaged.xml_check:XmlCheckPlugin"
BlackFormatCheckPlugin = "dgis.hooks.plugins.packaged.black_format_check:BlackFormatCheckPlugin"

[project.urls]
Homepage = "https://github.com/sadads1337/dgis_hooks"
Issues = "https://github.com/sadads1337/dgis_hooks/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
